[gd_scene load_steps=46 format=3 uid="uid://bi25upexphthx"]

[ext_resource type="Script" path="res://scripts/wolf.gd" id="1_sgvjy"]
[ext_resource type="Texture2D" uid="uid://bkjtajdm0tq67" path="res://sprites/tricky_wolf.png" id="2_8fens"]
[ext_resource type="PackedScene" uid="uid://dsdts71tmlke5" path="res://scenes/damage_zone.tscn" id="5_1ygqg"]
[ext_resource type="PackedScene" uid="uid://dqepojbmga4ea" path="res://scenes/navigation_agent_2d.tscn" id="6_6t36j"]
[ext_resource type="Animation" uid="uid://b1bn6rpg1nngh" path="res://animation/stun.res" id="6_dtwnk"]
[ext_resource type="Script" path="res://scripts/targetFinder.gd" id="7_qybm0"]
[ext_resource type="AudioStream" uid="uid://dqcq8pnb706f2" path="res://sounds/goblin_yell.mp3" id="8_hfivr"]
[ext_resource type="AudioStream" uid="uid://colc12t274qwt" path="res://sounds/weapon/dagger_woosh.mp3" id="9_ny0e1"]
[ext_resource type="AudioStream" uid="uid://yi2aurllo2s0" path="res://sounds/weapon/knifesword-stab.wav" id="10_i3fw2"]
[ext_resource type="Script" path="res://scripts/what_am_i_thinking.gd" id="10_r3ibn"]
[ext_resource type="Script" path="res://scripts/wandering.gd" id="11_88k68"]
[ext_resource type="Script" path="res://scripts/fleeing.gd" id="12_etkvk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_riha1"]
size = Vector2(20, 7.85714)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ic6rm"]
size = Vector2(158, 57)

[sub_resource type="Animation" id="Animation_2swvi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cg68e"]
resource_name = "attack"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/damage_zone:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.06, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_mtitu"]
resource_name = "chasing"
loop_mode = 1

[sub_resource type="Animation" id="Animation_ic3m7"]
resource_name = "dying"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(10),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_jvuwq"]
resource_name = "fleeing"
loop_mode = 1

[sub_resource type="Animation" id="Animation_gylsu"]
resource_name = "wandering"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uihj1"]
_data = {
"RESET": SubResource("Animation_2swvi"),
"attack": SubResource("Animation_cg68e"),
"chasing": SubResource("Animation_mtitu"),
"dying": SubResource("Animation_ic3m7"),
"fleeing": SubResource("Animation_jvuwq"),
"stun": ExtResource("6_dtwnk"),
"wandering": SubResource("Animation_gylsu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w5dv5"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c14qp"]
animation = &"chasing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v7si6"]
animation = &"dying"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8qvhq"]
animation = &"fleeing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pig7j"]
animation = &"stun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lma3l"]
animation = &"wandering"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jryju"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6gg5j"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kqpmq"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hcv2b"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0v775"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xa6cx"]
advance_mode = 2
advance_condition = &"target"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xhdx3"]
advance_mode = 2
advance_condition = &"wandering"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cpaxi"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xj7us"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xsrum"]
advance_mode = 2
advance_condition = &"unstun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nhyqk"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6lam7"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oqe7p"]
advance_mode = 2
advance_condition = &"flee"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3upyx"]
advance_mode = 2
advance_condition = &"unflee"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2xm8c"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n8lar"]
advance_mode = 2
advance_condition = &"stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3gp02"]
advance_mode = 2
advance_condition = &"dying"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6vsa7"]
states/Start/position = Vector2(200.5, 91)
states/attack/node = SubResource("AnimationNodeAnimation_w5dv5")
states/attack/position = Vector2(522.34, 260.71)
states/chasing/node = SubResource("AnimationNodeAnimation_c14qp")
states/chasing/position = Vector2(444, 91.25)
states/dying/node = SubResource("AnimationNodeAnimation_v7si6")
states/dying/position = Vector2(645, 91.5)
states/fleeing/node = SubResource("AnimationNodeAnimation_8qvhq")
states/fleeing/position = Vector2(427.03, -46.3725)
states/stun/node = SubResource("AnimationNodeAnimation_pig7j")
states/stun/position = Vector2(722.455, 194.823)
states/wandering/node = SubResource("AnimationNodeAnimation_lma3l")
states/wandering/position = Vector2(324.42, 223.961)
transitions = ["chasing", "dying", SubResource("AnimationNodeStateMachineTransition_jryju"), "chasing", "attack", SubResource("AnimationNodeStateMachineTransition_6gg5j"), "attack", "chasing", SubResource("AnimationNodeStateMachineTransition_kqpmq"), "attack", "dying", SubResource("AnimationNodeStateMachineTransition_hcv2b"), "Start", "wandering", SubResource("AnimationNodeStateMachineTransition_0v775"), "wandering", "chasing", SubResource("AnimationNodeStateMachineTransition_xa6cx"), "chasing", "wandering", SubResource("AnimationNodeStateMachineTransition_xhdx3"), "wandering", "dying", SubResource("AnimationNodeStateMachineTransition_cpaxi"), "attack", "stun", SubResource("AnimationNodeStateMachineTransition_xj7us"), "stun", "chasing", SubResource("AnimationNodeStateMachineTransition_xsrum"), "wandering", "stun", SubResource("AnimationNodeStateMachineTransition_nhyqk"), "chasing", "stun", SubResource("AnimationNodeStateMachineTransition_6lam7"), "chasing", "fleeing", SubResource("AnimationNodeStateMachineTransition_oqe7p"), "fleeing", "chasing", SubResource("AnimationNodeStateMachineTransition_3upyx"), "fleeing", "dying", SubResource("AnimationNodeStateMachineTransition_2xm8c"), "fleeing", "stun", SubResource("AnimationNodeStateMachineTransition_n8lar"), "stun", "dying", SubResource("AnimationNodeStateMachineTransition_3gp02")]
graph_offset = Vector2(78.8701, -82.8649)

[node name="Wolf" type="CharacterBody2D" groups=["mob"]]
z_index = 9
script = ExtResource("1_sgvjy")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_8fens")
region_rect = Rect2(384, 128, 128, 128)

[node name="RayCast2D" type="RayCast2D" parent="Sprite2D"]
target_position = Vector2(91, 0)

[node name="damage_zone" parent="Sprite2D" node_paths=PackedStringArray("sound") instance=ExtResource("5_1ygqg")]
damage = 0.5
sound = NodePath("../../bite_sound")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/damage_zone"]
position = Vector2(70, -3)
rotation = 1.5708
scale = Vector2(1.72, 5.6)
shape = SubResource("RectangleShape2D_riha1")

[node name="ItemBack" type="Node2D" parent="Sprite2D"]
z_index = -1
position = Vector2(-49, -6)
rotation = -1.62425

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -2.5)
shape = SubResource("RectangleShape2D_ic6rm")

[node name="NavigationAgent2D" parent="." instance=ExtResource("6_6t36j")]

[node name="TargetFinder" type="Node" parent="."]
script = ExtResource("7_qybm0")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uihj1")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uihj1")
}
tree_root = SubResource("AnimationNodeStateMachine_6vsa7")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/dying = false
parameters/conditions/flee = false
parameters/conditions/stun = false
parameters/conditions/target = false
parameters/conditions/unflee = false
parameters/conditions/unstun = false
parameters/conditions/wandering = false

[node name="death_yell" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_hfivr")
bus = &"SFX"

[node name="attack_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ny0e1")
bus = &"SFX"

[node name="bite_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_i3fw2")
bus = &"SFX"

[node name="Wandering" type="Node" parent="."]
script = ExtResource("11_88k68")

[node name="WhatAmIThinking" type="Node" parent="."]
script = ExtResource("10_r3ibn")

[node name="Fleeing" type="Node" parent="."]
script = ExtResource("12_etkvk")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
